<resources>
    <string name="app_name">LTI Monitoring</string>
    <string name="rekap_presensi">Rekap</string>
    <string name="buat_pengumuman">Buat Pengumuman</string>
    <string name="daftar_mitra_kerja">Mitra Kerja</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mitra_kerja">Mitra</string>
    <string name="welcome_administrator">Welcome, %1$s</string>
    <string name="judul_pengumuman">Judul Pengumuman</string>
    <string name="isi_pengumuman">Isi Pengumuman</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dari_tanggal">Dari Tanggal</string>
    <string name="sampai_tanggal">Sampai Tanggal</string>
    <string name="rekap_presensi_mitra">Rekap Presensi Mitra</string>
    <string name="kirim">Kirim</string>
    <string name="sending_notice">Mengirimkan Pengumuman....</string>
    <string name="kirim_pengumuman">Kirim Pengumuman</string>
    <string name="date">%1$d-%2$s-%3$s</string>
    <string name="dp">Datepickerdialog</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Pengaturan</string>
    <string name="something_wrong">Something wrong</string>
    <string name="jam_pelaksanaan">Pelaksanaan: %1$s-%2$s</string>
    <string name="mitra_online">Mitra Masuk</string>
    <string name="presensi_terbaru">Presensi Terbaru</string>
    <string name="permintaan_cuti">Permintaan Cuti</string>
    <string name="no_data">Tidak ada data</string>
    <string name="aktivitas_terbaru">Aktivitas Terbaru</string>
    <string name="pendaftar">Pendaftar</string>
    <string name="lainnya">Lainnya</string>
    <string name="hari_libur_mitra">Hari Libur Mitra</string>

    <string-array name="bulan">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>
