<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/version"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/notification"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


                    <ImageView
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/app_name"
                        android:tint="@color/colorAccent"
                        app:srcCompat="@drawable/ic_notifications" />

                    <ImageView
                        android:id="@+id/dots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/notification"
                        android:layout_alignEnd="@id/notification"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_dots" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/masuk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:elevation="2dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/rekap_presensi"
                                android:drawableTop="@drawable/ic_user_add_back"
                                android:drawablePadding="8dp"
                                android:gravity="center_horizontal"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pulang"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:elevation="2dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:drawableTop="@drawable/ic_user_check_back"
                                android:drawablePadding="8dp"
                                android:text="@string/buat_pengumuman"
                                android:gravity="center_horizontal"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:elevation="2dp"
                    android:padding="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableTop="@drawable/ic_user_history_back"
                            android:drawablePadding="8dp"
                            android:text="@string/daftar_mitra_kerja"
                            android:gravity="center_horizontal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>